<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_check">查看</string>
    <string name="about_clean">清理缓存数据</string>
    <string name="about_clean_p_toast">请在P挡下使用该功能</string>
    <string name="about_clean_space_used">空间已使用%1$s</string>
    <string name="about_execute">执行</string>
    <string name="about_policy">隐私政策</string>
    <string name="about_restore">恢复出厂设置</string>
    <string name="about_storage_app_space_code">应用</string>
    <string name="about_storage_app_space_data">文稿与数据</string>
    <string name="about_store_full_content">当前可用储存空间已满，是否前往清理？</string>
    <string name="about_store_full_content2">可用储存空间严重不足，请立即清理！</string>
    <string name="about_store_full_content_tts">当前可用空间已满，前往清理请说好的</string>
    <string name="about_store_full_content_tts2">当前可用空间严重不足，前往清理请说好的</string>
    <string name="about_store_full_title">储存空间已满</string>
    <string name="about_store_full_title2">储存空间严重不足</string>
    <string name="about_store_warning_content">当前可用空间不足，是否前往清理</string>
    <string name="about_store_warning_content_tts">当前可用空间不足，前往清理请说好的</string>
    <string name="about_store_warning_ok">好的</string>
    <string name="about_store_warning_title">储存空间不足</string>
    <string name="about_subtitle_device_info">设备详情</string>
    <string name="about_user_agreement">用户协议</string>
    <string name="account_unlogin">未登录</string>
    <string name="air_temperature">副驾空调温度</string>
    <string name="air_volume">空调风量</string>
    <string name="app_name">系统设置</string>
    <string name="auth_mode_dialog_msg">授权模式将于 %s 自动退出。</string>
    <string name="auth_mode_dialog_quit">现在退出</string>
    <string name="auth_mode_dialog_title">授权模式</string>
    <string name="auto_air_volume">自动风量</string>
    <string name="available_via_carrier">可通过%1$s连接</string>
    <string name="available_via_passpoint">可通过%1$s连接</string>
    <string name="back_seat_driver_bluetooth_power">后排蓝牙开关</string>
    <string name="bluetooth_a2dp_profile_summary_connected">已连接到媒体音频</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">用于媒体音频</string>
    <string name="bluetooth_a2dp_tips">前往“音乐”应用点击蓝牙按钮，启用蓝牙音乐</string>
    <string name="bluetooth_active_battery_level">使用中，电池电量：%1$s</string>
    <string name="bluetooth_active_no_battery_level">使用中</string>
    <string name="bluetooth_battery_level">电池电量：%1$s</string>
    <string name="bluetooth_busy_tips">蓝牙设备占用中，请稍后再试</string>
    <string name="bluetooth_car_name">蓝牙名称</string>
    <string name="bluetooth_car_name_tip">小鹏汽车</string>
    <string name="bluetooth_connected">已连接%1$s</string>
    <string name="bluetooth_connected_battery_level">已连接，电量为 %1$s %2$s</string>
    <string name="bluetooth_connected_no_a2dp">已连接（无媒体信号）%1$s</string>
    <string name="bluetooth_connected_no_a2dp_battery_level">已连接（无媒体信号），电量为 %1$s %2$s</string>
    <string name="bluetooth_connected_no_headset">已连接（无手机信号）%1$s</string>
    <string name="bluetooth_connected_no_headset_battery_level">已连接（无手机信号），电量为 %1$s %2$s</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">已连接（无手机或媒体信号）%1$s</string>
    <string name="bluetooth_connected_no_headset_no_a2dp_battery_level">已连接（无手机或媒体信号），电量为 %1$s %2$s</string>
    <string name="bluetooth_connecting">正在连接...</string>
    <string name="bluetooth_disconnected">已断开连接</string>
    <string name="bluetooth_disconnecting">正在断开连接...</string>
    <string name="bluetooth_error_device_connecting">设备正在连接中,请稍候</string>
    <string name="bluetooth_error_device_disconnecting">设备正在断开连接中,请稍候</string>
    <string name="bluetooth_headset_profile_summary_connected">已连接到手机音频</string>
    <string name="bluetooth_headset_profile_summary_use_for">用于手机音频</string>
    <string name="bluetooth_hearing_aid_profile_summary_connected">已连接到助听器</string>
    <string name="bluetooth_hearing_aid_profile_summary_use_for">用于助听器</string>
    <string name="bluetooth_hid_profile_summary_connected">已连接到输入设备</string>
    <string name="bluetooth_hid_profile_summary_use_for">用于输入</string>
    <string name="bluetooth_map_profile_summary_connected">已连接到地图</string>
    <string name="bluetooth_map_profile_summary_use_for">用于地图</string>
    <string name="bluetooth_none_device_tip">暂无可用新设备，请稍后点击“搜索”重试</string>
    <string name="bluetooth_pairing">正在配对...</string>
    <string name="bluetooth_pairing_popup_title">蓝牙配对请求</string>
    <string name="bluetooth_pairing_request">\"%s\"想与你进行配对，是否允许？</string>
    <string name="bluetooth_pairing_request_busy">设备正在配对中，请稍候</string>
    <string name="bluetooth_pairing_request_local">配对请求已发送，请到“%s”确认</string>
    <string name="bluetooth_pan_nap_profile_summary_connected">与其他设备共享该设备的互联网连接</string>
    <string name="bluetooth_pan_profile_summary_use_for">用于访问互联网</string>
    <string name="bluetooth_subtitle_footer">更多设置</string>
    <string name="bluetooth_visible">开放蓝牙检测</string>
    <string name="bluetooth_visible_tip">开启后对附近所有蓝牙设备可见</string>
    <string name="display_current_region">当前地区: %1$s</string>
    <string name="display_region">地区</string>
    <string name="display_sample_region">区域格式示例</string>
    <string name="display_timezone_auto_subtitle">使⽤运营商⽹络提供的当地时区时间</string>
    <string name="display_timezone_auto_title">自动时区: %s</string>
    <string name="display_timezone_manual_title_unset">选择时区</string>
    <string name="laboratory_app_used_limit">三方应用使用限制</string>
    <string name="laboratory_app_used_limit_tips">关闭后，在行驶中使用三方应用会有安全隐患，请谨慎操作</string>
    <string name="laboratory_auto_power_off">自动下电</string>
    <string name="laboratory_auto_power_off_tips">开启后，主驾无人时1小时内若无任何操作会自动下电</string>
    <string name="laboratory_car_call_advanced">增强版车辆召唤</string>
    <string name="laboratory_car_call_advanced_tips">开启后，可基于设定路线在视距内召唤车辆</string>
    <string name="laboratory_coming_soon">敬请期待</string>
    <string name="laboratory_induction_lock">靠近自动解锁与离开自动闭锁</string>
    <string name="laboratory_induction_lock_tips">开启后，所有车门关闭时，携智能蓝牙钥匙靠近自动解锁、远离自动闭锁</string>
    <string name="laboratory_inductive_unlocking_title">感应式解闭锁</string>
    <string name="laboratory_leave_locking_tips">开启后，所有车门关闭且主副驾无人时，携钥匙（手机和NFC卡片钥匙除外）远离自动闭锁</string>
    <string name="laboratory_leave_locking_title">离开自动闭锁</string>
    <string name="laboratory_low_speed_alarm_sound">低速模拟音音量</string>
    <string name="laboratory_low_speed_alarm_sound_tips">音量调节永久有效，调低后存在车外提示风险，请谨慎操作</string>
    <string name="laboratory_near_unlocking_tips">开启后，所有车门关闭且主副驾无人时，携钥匙（手机和NFC卡片钥匙除外）靠近自动解锁</string>
    <string name="laboratory_near_unlocking_title">靠近自动解锁</string>
    <string name="laboratory_no_function_tips">暂无实验功能开放</string>
    <string name="laboratory_remote_control">钥匙遥控泊车</string>
    <string name="laboratory_remote_control_advanced">增强版遥控泊车</string>
    <string name="laboratory_remote_control_advanced_tips">开启后，可使用手机或钥匙激活记忆泊车的末段里程</string>
    <string name="laboratory_remote_control_key">钥匙遥控泊车</string>
    <string name="laboratory_remote_control_key_tips">开启后，使用钥匙控制泊入/泊出</string>
    <string name="laboratory_remote_control_tips">开启后，使用钥匙控制泊入/泊出</string>
    <string name="laboratory_soldier_camera_level">录制视频发送到手机</string>
    <string name="laboratory_soldier_camera_tips">发生剐蹭时，录制车外影像保存在中控屏相册，并将视频脱敏推送到手机</string>
    <string name="laboratory_soldier_level">哨兵模式灵敏度</string>
    <string name="laboratory_soldier_tips">启用后，车辆下电期间若发生剐蹭会发送通知到手机</string>
    <string name="laboratory_tips_security">安全相关</string>
    <string name="laboratory_tips_text">小鹏实验室使用协议</string>
    <string name="laboratory_tts_broadcast_tips">选择辅助驾驶的安全提醒以详细还是简洁的方式播报</string>
    <string name="laboratory_tts_broadcast_type">辅助驾驶播报形式</string>
    <string name="low_speed_analog_cue_tone">低速模拟音</string>
    <string name="low_speed_tips2">此处设置永久有效，关闭后存在车外提示风险，请谨慎操作</string>
    <string name="more">更多</string>
    <string name="sound_decrease_volume">导航时降低音量</string>
    <string name="sound_decrease_volume_tip_low">导航及巡航播报时媒体音量自动降低</string>
    <string name="sound_gear_r">倒车降低音量</string>
    <string name="sound_gear_r_tips">挂R挡后媒体、导航、语音音量自动降低</string>
    <string name="sound_open_door">开门降低音量</string>
    <string name="sound_open_door_tips">主驾车门打开后媒体音量自动降低</string>
    <string name="sound_outside_low_speed_simulate">车外低速模拟音</string>
    <string name="sound_subtitle_intelligence">智能调控</string>
    <string name="sound_subtitle_volume">音量调节</string>
    <string name="sound_volume_by_speed">音量随速调节</string>
    <string name="sound_volume_car">安全提示音</string>
    <string name="sound_volume_car_tip_low">仪表提示音、整车信息提示音</string>
    <string name="sound_volume_media">媒体音量</string>
    <string name="sound_volume_media_tip">音乐、视频等声音</string>
    <string name="sound_volume_media_tip_out_side">音乐、视频等车外媒体播放音量</string>
    <string name="sound_volume_position">方位感提醒音</string>
    <string name="sound_volume_position_tip">部分系统、仪表和报警提示音方位感音效</string>
    <string name="sound_volume_speech">语音播报音量</string>
    <string name="sound_volume_speech_tip">语音交互、来电提醒</string>
    <string name="sound_volume_system">系统提示音</string>
    <string name="sound_volume_system_tip">包含按键音，通知提示音</string>
    <string name="sound_volume_tts">导航播报音量</string>
    <string name="sound_volume_tts_tip">巡航播报、导航播报</string>
    <string name="speech_awaken">允许语音唤醒</string>
    <string name="speech_awaken_tip">开启后，可通过“你好小 P”唤醒 AI 助手</string>
    <string name="speech_hello">小P问候</string>
    <string name="speech_hello_tip">开启后，每次唤醒小P主页将收到小P的声音问候</string>
    <string name="speech_interrupt">打断语音播报</string>
    <string name="speech_interrupt_tip">开启后，可以在多轮对话的过程中打断语音播报</string>
    <string name="speech_oneshot">允许 Oneshot</string>
    <string name="speech_oneshot_tip">开启后，支持“你好小 P”+指令 连着说，如“你好小 P，打开空调</string>
    <string name="speech_quick">允许快捷操作</string>
    <string name="speech_quick_tip">开启后，无需唤醒，直接说出指令即可实现部分快捷操作</string>
    <string name="speech_subtitle_set">小P设置</string>
    <string name="traffic_connected_device">已连接热点的设备</string>
    <string name="traffic_name">热点名称</string>
    <string name="traffic_name_tip">小鹏汽车</string>
    <string name="traffic_password">车载热点密码</string>
    <string name="traffic_password_tip">12345678</string>
    <string name="traffic_power">车载热点开关</string>
    <string name="traffic_subtitle_set">车载热点</string>
</resources>