<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:scrollbarSize="@dimen/scroll_bar_width" android:scrollbarStyle="outsideOverlay" android:orientation="vertical" android:id="@+id/layout_laboratory" android:paddingRight="@dimen/scroll_bar_padding" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="match_parent" app:vuiAction="ScrollByY">
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/app_limit" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_app_used_limit" app:list_two_text_sub="@string/laboratory_app_used_limit_tips" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XGroupHeader android:id="@+id/laboratory_security_group" android:layout_width="wrap_content" android:layout_marginTop="@dimen/padding_large" app:group_header_text="@string/laboratory_tips_security" app:vuiMode="DISABLED" style="@style/XGroupHeader"/>
        <com.xiaopeng.xui.widget.XListMultiple android:id="@+id/low_speed_e28" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_multiple_bottom="@layout/x_list_multiple_action_slider" app:list_multiple_text="@string/laboratory_low_speed_alarm_sound" app:list_multiple_text_sub="@string/laboratory_low_speed_alarm_sound_tips" style="@style/XList.Multiple"/>
        <com.xiaopeng.xui.widget.XListMultiple android:id="@+id/soldier_level" android:background="@drawable/list_item_top_arc_bg" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_multiple_bottom="@layout/laboratory_list_multiple_action_segmented_level" app:list_multiple_text="@string/laboratory_soldier_level" app:list_multiple_text_sub="@string/laboratory_soldier_tips" style="@style/XList.Multiple"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/soldier_camera" android:background="@drawable/list_item_bottom_arc_bg" android:visibility="gone" android:layout_marginTop="@dimen/list_cling_margin" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_soldier_camera_level" app:list_two_text_sub="@string/laboratory_soldier_camera_tips" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/remote_control_key" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_remote_control_key" app:list_two_text_sub="@string/laboratory_remote_control_key_tips" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/remote_control_advanced" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_remote_control_advanced" app:list_two_text_sub="@string/laboratory_remote_control_advanced_tips" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/car_call_advanced" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_car_call_advanced" app:list_two_text_sub="@string/laboratory_car_call_advanced_tips" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/low_speed_d21" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/low_speed_analog_cue_tone" app:list_two_text_sub="@string/low_speed_tips2" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/remote_control_d21" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_remote_control" app:list_two_text_sub="@string/laboratory_remote_control_tips" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XGroupHeader android:id="@+id/inductive_unlocking" android:visibility="gone" android:layout_width="wrap_content" android:layout_marginTop="@dimen/padding_large" android:layout_marginBottom="@dimen/laboratory_header_padding_bottom" app:group_header_text="@string/laboratory_inductive_unlocking_title" app:vuiMode="DISABLED" style="@style/XGroupHeader"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/laboratory_near_unlock" android:background="@drawable/list_item_top_arc_bg" android:visibility="gone" android:layout_marginTop="@dimen/laboratory_item_padding_top" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_near_unlocking_title" app:list_two_text_sub="@string/laboratory_near_unlocking_tips" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/laboratory_leave_lock" android:background="@drawable/list_item_bottom_arc_bg" android:visibility="gone" android:layout_marginTop="@dimen/laboratory_item_padding_top" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_leave_locking_title" app:list_two_text_sub="@string/laboratory_leave_locking_tips" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/d21_induction_lock" android:visibility="gone" android:layout_marginTop="@dimen/laboratory_item_padding_top" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_induction_lock" app:list_two_text_sub="@string/laboratory_induction_lock_tips" style="@style/XList.Two"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/laboratory_tips_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.xiaopeng.xui.widget.XGroupHeader android:id="@+id/laboratory_more_header" android:layout_width="wrap_content" android:layout_marginTop="@dimen/padding_large" app:group_header_text="@string/more" app:vuiMode="DISABLED" style="@style/XGroupHeader"/>
            <com.xiaopeng.xui.widget.XListTwo android:id="@+id/auto_power_off" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_auto_power_off" app:list_two_text_sub="@string/laboratory_auto_power_off_tips" style="@style/XList.Two"/>
            <com.xiaopeng.xui.widget.XListMultiple android:id="@+id/tts_broadcast" android:visibility="gone" android:layout_marginTop="@dimen/padding_normal" app:list_multiple_bottom="@layout/laboratory_tts_broadcast_segmented_level" app:list_multiple_text="@string/laboratory_tts_broadcast_type" app:list_multiple_text_sub="@string/laboratory_tts_broadcast_tips" style="@style/XList.Multiple"/>
            <com.xiaopeng.xui.widget.XListSingle android:id="@+id/laboratory_tips_list" android:layout_marginTop="@dimen/padding_normal" app:list_single_left="@layout/x_list_action_button" app:list_single_left_right_touch_full="left" app:list_single_text="@string/laboratory_tips_text" app:vuiLabel="@string/laboratory_tips_text" style="@style/XList.Singe"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:id="@+id/laboratory_no_views" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" app:vuiMode="DISABLED">
            <com.xiaopeng.xui.widget.XImageView android:layout_gravity="center_horizontal" android:layout_width="@dimen/laboratory_empty_icon_wh" android:layout_height="@dimen/laboratory_empty_icon_wh" android:layout_marginTop="@dimen/laboratory_empty_padding_top1" android:src="@drawable/ic_xxlarge_xpeng"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_01_size" android:textColor="@color/x_theme_text_01" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/laboratory_empty_padding_top2" android:text="@string/laboratory_no_function_tips"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_04_size" android:textColor="@color/x_theme_text_03" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/laboratory_empty_padding_top3" android:text="@string/laboratory_coming_soon"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
    </com.xiaopeng.xui.widget.XLinearLayout>
</com.xiaopeng.xui.widget.XScrollView>
