<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.xiaopeng.xui.widget.XGroupHeader android:layout_width="match_parent" app:group_header_text="@string/traffic_subtitle_set" style="@style/XGroupHeader"/>
    <com.xiaopeng.xui.widget.XListSingle android:id="@+id/hotspot_switch" android:layout_marginTop="@dimen/padding_normal" app:list_single_left="@layout/x_list_action_switch" app:list_single_text="@string/traffic_power" style="@style/XList.Singe"/>
    <com.xiaopeng.xui.widget.XListTwo android:id="@+id/hotspot_name" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_button" app:list_two_text="@string/traffic_name" app:list_two_text_sub="@string/traffic_name_tip" app:list_two_text_sub_highlight="true" style="@style/XList.Two"/>
    <com.xiaopeng.xui.widget.XListTwo android:id="@+id/hotspot_pass" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_button" app:list_two_text="@string/traffic_password" app:list_two_text_sub="@string/traffic_password_tip" app:list_two_text_sub_highlight="true" style="@style/XList.Two"/>
    <com.xiaopeng.xui.widget.XGroupHeader android:id="@+id/hotspot_groupheader" android:layout_width="match_parent" android:layout_marginTop="@dimen/padding_large" app:group_header_text="@string/traffic_connected_device" style="@style/XGroupHeader"/>
</LinearLayout>
