<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" app:vuiMode="DISABLED">
    <com.xiaopeng.xui.widget.XGroupHeader android:id="@+id/bluetooth_footer_header" android:layout_width="match_parent" android:layout_marginTop="@dimen/padding_large" app:group_header_text="@string/bluetooth_subtitle_footer" app:vuiLabel="@string/bluetooth_subtitle_footer" style="@style/XGroupHeader"/>
    <com.xiaopeng.xui.widget.XListTwo android:id="@+id/bluetooth_name" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_button" app:list_two_left_right_touch_full="left" app:list_two_text="@string/bluetooth_car_name_tip" app:list_two_text_sub="@string/bluetooth_car_name" app:list_two_text_sub_highlight="true" app:vuiFatherLabel="@string/bluetooth_subtitle_footer" style="@style/XList.Two"/>
    <com.xiaopeng.xui.widget.XListTwo android:id="@+id/bluetooth_visible" android:layout_marginTop="@dimen/padding_normal" app:list_two_left="@layout/x_list_action_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/bluetooth_visible" app:list_two_text_sub="@string/bluetooth_visible_tip" app:vuiFatherLabel="@string/bluetooth_subtitle_footer" style="@style/XList.Two"/>
</com.xiaopeng.xui.widget.XLinearLayout>
